# decimus

./: README.md
R/: plot_rawdata_v00.R  timeseries_agm_framewindows_v00.R
bluetooth/: README.md  automatic_connection.sh  miniterm.py  rfcomm.conf
data/nao2/: imu0_20-07-2016_11-44-04.csv  imu1_20-07-2016_11-44-04.csv
data/test/: imu0_20052015-114259.csv
data/user/: imu0_22072015-115104.csv
lib_dependencies/: README.md  setting_lib_dependecies.sh
lib_dependencies/eigen/: Makefile  README.md  eigen_lib.sh  my_program_a.cpp  my_program_b.cpp
lib_dependencies/testing_libs/: Makefile  README.md  boostclock0.cpp  boostclock1.cpp  boostiterator.cpp  boostregex.cpp
r-code/: .Rhistory  README.md  functions.R  plot_eulerdata.R  plot_rawdata.R  plot_rawdata_2sensors.R  plot_rawdata_v00.R
razor_calibration/: README.md
razor_config/: README.md
razor_config/ACC_GYR_Calibration/: README.md  acc_cal.R  acc_x_neg.raw  acc_x_plus.raw  acc_y_neg.raw  acc_y_plus.raw  acc_z_neg.raw  acc_z_plus.raw  gyr_cal.R  gyr_xyz.raw
razor_config/Magnetomer_Calibration/: README.md
razor_config/Magnetomer_Calibration/install_processing/: README.md  (+1 more)
razor_config/Razor_AHRS/: README.md
razor_config/Razor_Quaternion/: README.md
razor_config/gRANGE_test/: README.md
razor_config/processing/: README.md
src/: CMakeLists.txt  Decimus.cpp  Decimus.h  Makefile  README.md  RazorAHRS.cpp  RazorAHRS.h  logbook  main  main.cpp  src-kproject.kdev4
src-2imus/: Decimus.cpp  Makefile  README.md  main.cpp
src-2imus/decimus_razorahrs/: Decimus.cpp  Decimus.h  Makefile  README.md  RazorAHRS.h  kproject.kdev4
src-2imus/razorahrs/: CMakeLists.txt  Makefile  README.md  RazorAHRS.cpp  RazorAHRS.h  main.cpp
src-2imus/razorahrs_imuA/: CMakeLists.txt  RazorAHRS.h  main.cpp
src-2imus/razorahrs_imuB/: RazorAHRS.cpp  main.cpp
src-bare/: Example.cpp  Makefile  README.md  RazorAHRS.cpp  RazorAHRS.h
(+14 files in other folders)
